--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=staging
 APP_KEY=base64:koC8FRv+whPIbfnU3eYO5+Po9by1zOzGCn1USzyp+LA=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
